# otto

./: .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  Makefile  README.md  TODO.md  cffi_build.py  index.html  introduction.html  print.html  pyproject.toml  searchindex.js  searchindex.json  setup.cfg  setup.py
.github/workflows/: ctest.yml  mdbook-pages.yml  testing.yml  todo-gen.yml
cl/buffer/: elementary.cl
cl/vector/: elementary.cl
docs/: book.toml
docs/src/: SUMMARY.md
examples/: CMakeLists.txt  __main__.py
examples/buffer_add/: CMakeLists.txt  main.c
examples/buffer_add_verbose/: main.c
examples/c/buffer_add/: main.c
examples/c/buffer_add_verbose/: CMakeLists.txt  main.c
examples/c/raw_ocl/: CMakeLists.txt
examples/c/raw_ocl/kernels/: vector_add.cl
examples/python/: basic.py  buffer_add.py  ffi.py  runtimes.py  vector_add.py
examples/raw_ocl/: CMakeLists.txt  main.c
examples/vector_add/: CMakeLists.txt  main.c
examples/vector_add_clean/: CMakeLists.txt  main.c
examples/vector_add_clean/ocl/: vector_add.cl
examples/vector_add_verbose/: CMakeLists.txt  main.c
include/otto/: buffer.h  devices.h  otto.h  paths.h  status.h  tensor.h  vector.h
include/otto/cl/: cl.h  kernel.h  ottocl.h  program.h  runtime.h
include/otto_cpp/: buffer.hpp  status.hpp
include/ottou/: log.h  macros.h
pyexamples/: __main__.py  basic.py  build_ffi.py  ffi.py  vector.py
pysrc/otto/: __init__.py  buffer.py  defs.py  dtypes.py  exceptions.py  status.py  vector.py
pysrc/otto/cl/: __init__.py  device.py  runtime.py
pysrc/otto/ffi/: __init__.py  __main__.py  devices.py  status.py
pysrc/otto/ffi/builder/: __init__.py
pysrc/otto/ffi/config/: __init__.py
pysrc/otto_ffi/: __init__.py  __main__.py  ld_path.py  vector.py
pysrc/otto_ffi/cl/: runtime.py
pysrc/otto_ffi/config/: __init__.py
pysrc/otto_ffi/ffi/: _buffer.py  _status.py  _vector.py
pysrc/otto_ffi/ffi/_cl/: __init__.py  _kernel.py  _program.py  _runtime.py
pysrc/otto_ffi/ffi/cl/: __init__.py  kernel.py  program.py
pysrc/otto_pyx/: status.c  status.pyx  vector.c  vector.pyx
pysrc/otto_utils/: logger.py
reference/: buffers.html  vectors.html
src/: CMakeLists.txt
src/otto_core/: CMakeLists.txt  buffer_attrs.c  buffer_creation.c  buffer_dev.c  devices.c  status.c  tensor.c  tensor_attrs.c  tensor_creation.c  vector.c  vector_attrs.c  vector_creation.c  vector_dev.c
src/otto_core/cl/: kernel.c  program.c  runtime.c  runtime_ll.c
src/otto_utils/: CMakeLists.txt  macros.c  macros.h  test.h
sys/: build.sh
tests/c/unittest/quick/: test_buffer_methods.c
tests/python/: test_vector.py
tests/unittest/: CMakeLists.txt
tests/unittest/quick/: test_buffer.c  test_buffer_creation.c  test_buffer_methods.c  test_buffer_modifiers.c  test_tensor.c  test_tensor_creation.c  test_tensor_methods.c  test_vector.c  test_vector_creation.c  test_vector_methods.c  test_vector_modification.c
usage/: examples.html
