[metadata]
name = otto
description = High performance GPGPU
author = Cristobal Allendes
license = MIT
license_files = [LICENSE]
platforms = supported-platforms
version = 0.1.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

# These options can be changed according to your project
[options]
packages =
    otto_ffi
    otto_ffi.config
    otto_ffi.ffi
    otto_ffi.ffi.cl
    otto_utils
python_requires = >=3.7
package_dir =
    =pysrc
zip_safe = no

[options.package_data]
otto_ffi =
    py.typed
    *.dll
    *.so
otto_utils = py.typed
